Add auth support
